# kerntest

./: Cargo.toml  link.ld
.cargo/: config.toml
src/: acpi.rs  allocator.rs  cpu.rs  driver.rs  exceptions.rs  framebuffer.rs  hpet.rs  interrupts.rs  kernel.rs  klog.rs  lapic.rs  main.rs  memdrv.rs  paging.rs  pciexpress.rs  physmap.rs  sync.rs  thread.rs  uefifb.rs
