[package]
name = "kerntest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acpi = { version = "5", features = [ "alloc" ] }
embedded-graphics = "0.8"
linkme = "0.3"
uefi = "0.32"
log = "0.4"
psm = "0.1"
snafu = { version = "0.8", default-features = false }
